<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chaplin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="access_token">access_token</string>
    <string name="title_activity_shows_list">Watchlist</string>
    <string name="edit_text_username_hint">Username</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="button_login">Login</string>
    <string name="title_activity_next_episode">Episodes</string>
    <string name="text_view_next_episode">Next episode to see:</string>
    <string name="text_view_wait">Waiting...</string>
    <string name ="check_box_watching">I\'m watching this</string>
    <string name="button_confirm">Confirm</string>

</resources>
