<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ChaplinMainActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/breakingbad">

    <LinearLayout android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:padding="30dp"
        android:layout_gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_username"
        android:hint="@string/edit_text_username_hint"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_horizontal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_text_password"
        android:hint="@string/edit_text_password_hint"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_horizontal" />

     <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:id="@+id/button_login"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_button"
            android:layout_marginTop="20dp"
         android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>
</LinearLayout>
